Add UT for tester class

--- a/src/engine/source/router/CMakeLists.txt
+++ b/src/engine/source/router/CMakeLists.txt
@@ -68,6 +68,7 @@ if(ENGINE_BUILD_TEST)
         ${UNIT_SRC_DIR}/environment_test.cpp
         ${UNIT_SRC_DIR}/environmentBuilder_test.cpp
         ${UNIT_SRC_DIR}/router_test.cpp
+        ${UNIT_SRC_DIR}/tester_test.cpp
         ${UNIT_SRC_DIR}/table_test.cpp
     )
     target_include_directories(router_utest PRIVATE ${SRC_DIR})
