Remove flatcc Fix state flatbuffer schema Add flatbuffer capacity in router module to convert jsons to flatbuffer.

--- a/src/shared_modules/content_manager/CMakeLists.txt
+++ b/src/shared_modules/content_manager/CMakeLists.txt
@@ -42,6 +42,7 @@ link_directories(${SRC_FOLDER}/external/zlib/)
 link_directories(${SRC_FOLDER}/external/zlib/contrib/minizip/)
 link_directories(${SHARED_MODULES}/router/build)
 link_directories(${SHARED_MODULES}/http-request/build)
+link_directories(${SRC_FOLDER}/external/flatbuffers/build/)
 
 file(GLOB CONTENT_DOWNLOAD_SRC
     "src/*.cpp"
@@ -51,7 +52,7 @@ add_library(content_manager SHARED
     ${CONTENT_DOWNLOAD_SRC}
     )
 
-target_link_libraries(content_manager router urlrequest gcc_s wazuhext lzma rocksdb)
+target_link_libraries(content_manager router urlrequest gcc_s wazuhext lzma rocksdb flatbuffers)
 
 set_target_properties(content_manager PROPERTIES
         BUILD_RPATH_USE_ORIGIN TRUE
