--- a/src/shared_modules/router/CMakeLists.txt
+++ b/src/shared_modules/router/CMakeLists.txt
@@ -25,8 +25,11 @@ include_directories(${SRC_FOLDER}/headers)
 include_directories(${SRC_FOLDER}/external/rocksdb/include)
 include_directories(${SRC_FOLDER}/external/nlohmann)
 include_directories(${SRC_FOLDER}/external/cJSON)
-
+include_directories(${SRC_FOLDER}/external/flatbuffers/include)
 include_directories(${SHARED_MODULES}/utils)
+
+# Link directories
+link_directories(${SRC_FOLDER}/external/flatbuffers/build/)
 
 file(GLOB ROUTER_SRC
     "src/*.cpp"
@@ -36,7 +39,7 @@ add_library(router SHARED
     ${ROUTER_SRC}
     )
 
-target_link_libraries(router gcc_s)
+target_link_libraries(router gcc_s flatbuffers)
 
 set_target_properties(router PROPERTIES
         BUILD_RPATH_USE_ORIGIN TRUE
