--- a/src/shared_modules/utils/CMakeLists.txt
+++ b/src/shared_modules/utils/CMakeLists.txt
@@ -7,3 +7,7 @@ if(UNIT_TEST)
       add_subdirectory(benchmark)
     endif()
 endif()
+
+if (${TARGET} STREQUAL "server")
+    add_subdirectory(flatbuffers)
+endif()
