--- a/src/engine/source/cmds/CMakeLists.txt
+++ b/src/engine/source/cmds/CMakeLists.txt
@@ -1,11 +1,11 @@
 add_library(cmds STATIC
     src/graph.cpp
     src/start.cpp
-    # src/test.cpp
+    src/tester.cpp
     src/kvdb.cpp
     src/catalog.cpp
     src/config.cpp
-    # src/router.cpp
+    src/router.cpp
     src/metrics.cpp
     src/policy.cpp
 )
