Added missing dependency for valgrind

--- a/.github/actions/compile_and_test/action.yml
+++ b/.github/actions/compile_and_test/action.yml
@@ -19,7 +19,7 @@ runs:
       - name: Install dependencies
         uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: valgrind
+          packages: valgrind libc6-dbg
           version: 1.0
 
       # Dependencies for coverage:
