Deprecate syscheck and syscollector endpoints

--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -14519,6 +14519,7 @@ paths:
     get:
       tags:
       - Syscheck
+      deprecated: true
       summary: "Get results"
       description: "Return FIM findings in the specified agent"
       operationId: api.controllers.syscheck_controller.get_syscheck_agent
@@ -14609,6 +14610,7 @@ paths:
     delete:
       tags:
         - Syscheck
+      deprecated: true
       summary: "Clear results"
       description: "Clear file integrity monitoring scan results for a specified agent. Only available for agents < 3.12.0, it doesn't apply for more recent ones"
       operationId: api.controllers.syscheck_controller.delete_syscheck_agent
@@ -15202,6 +15204,7 @@ paths:
     delete:
       tags:
         - Experimental
+      deprecated: true
       summary: "Clear agents FIM results"
       description: "Clear the syscheck database for all agents or a list of them"
       operationId: api.controllers.experimental_controller.clear_syscheck_database
@@ -15352,6 +15355,7 @@ paths:
     get:
       tags:
         - Experimental
+      deprecated: true
       summary: "Get agents hardware"
       description: "Return all agents (or a list of them) hardware info. This information include cpu, ram, scan info
       among others of all agents"
@@ -15447,6 +15451,7 @@ paths:
     get:
       tags:
         - Experimental
+      deprecated: true
       summary: "Get agents netaddr"
       description: "Return all agents (or a list of them) IPv4 and IPv6 addresses associated to their network
       interfaces. This information include used IP protocol, interface, and IP address among others"
@@ -15525,6 +15530,7 @@ paths:
     get:
       tags:
         - Experimental
+      deprecated: true
       summary: "Get agents netiface"
       description: "Return all agents (or a list of them) network interfaces. This information includes rx, scan, tx
       info and some network information among other"
@@ -15645,6 +15651,7 @@ paths:
     get:
       tags:
         - Experimental
+      deprecated: true
       summary: "Get agents netproto"
       description: "Return all agents (or a list of them) routing configuration for each network interface. This
       information includes interface, type protocol information among other"
@@ -15720,6 +15727,7 @@ paths:
     get:
       tags:
         - Experimental
+      deprecated: true
       summary: "Get agents OS"
       description: "Return all agents (or a list of them) OS info. This information includes os information,
       architecture information among other"
@@ -15823,6 +15831,7 @@ paths:
     get:
       tags:
         - Experimental
+      deprecated: true
       summary: "Get agents packages"
       description: "Return all agents (or a list of them) packages info. This information includes name, section, size,
       and priority information of all packages among other"
@@ -15923,6 +15932,7 @@ paths:
     get:
       tags:
         - Experimental
+      deprecated: true
       summary: "Get agents ports"
       description: "Return all agents (or a list of them) ports info. This information includes local IP, Remote IP,
       protocol information among other"
@@ -16026,6 +16036,7 @@ paths:
     get:
       tags:
         - Experimental
+      deprecated: true
       summary: "Get agents processes"
       description: "Return all agents (or a list of them) processes info"
       operationId: api.controllers.experimental_controller.get_processes_info
@@ -16153,6 +16164,7 @@ paths:
     get:
       tags:
         - Experimental
+      deprecated: true
       summary: "Get agents hotfixes"
       description: "Return all agents (or a list of them) hotfixes info"
       operationId: api.controllers.experimental_controller.get_hotfixes_info
@@ -16211,6 +16223,7 @@ paths:
     get:
       tags:
         - Syscollector
+      deprecated: true
       summary: "Get agent hardware"
       description: "Return the agent's hardware info. This information include cpu, ram, scan info among others"
       operationId: api.controllers.syscollector_controller.get_hardware_info
@@ -16269,6 +16282,7 @@ paths:
     get:
       tags:
         - Syscollector
+      deprecated: true
       summary: "Get agent hotfixes"
       description: "Return all hotfixes installed by Microsoft(R) in Windows(R) systems (KB... fixes)"
       operationId: api.controllers.syscollector_controller.get_hotfix_info
@@ -16325,6 +16339,7 @@ paths:
     get:
       tags:
         - Syscollector
+      deprecated: true
       summary: "Get agent netaddr"
       description: "Return the agent's network address info. This information include used IP protocol, interface, IP
       address  among others"
@@ -16388,6 +16403,7 @@ paths:
     get:
       tags:
         - Syscollector
+      deprecated: true
       summary: "Get agent netiface"
       description: "Return the agent's network interface info. This information include rx, scan, tx info and some
       network information among others"
@@ -16472,6 +16488,7 @@ paths:
     get:
       tags:
         - Syscollector
+      deprecated: true
       summary: "Get agent netproto"
       description: "Return the agent's routing configuration for each network interface"
       operationId: api.controllers.syscollector_controller.get_network_protocol_info
@@ -16534,6 +16551,7 @@ paths:
     get:
       tags:
         - Syscollector
+      deprecated: true
       summary: "Get agent OS"
       description: "Return the agent's OS info. This information include os information, architecture information among
       others of all agents"
@@ -16596,6 +16614,7 @@ paths:
     get:
       tags:
         - Syscollector
+      deprecated: true
       summary: "Get agent packages"
       description: "Return the agent's packages info. This information include name, section, size, priority
       information of all packages among others"
@@ -16697,6 +16716,7 @@ paths:
     get:
       tags:
         - Syscollector
+      deprecated: true
       summary: "Get agent ports"
       description: "Return the agent's ports info. This information include local IP, Remote IP, protocol information
       among others"
@@ -16803,6 +16823,7 @@ paths:
     get:
       tags:
         - Syscollector
+      deprecated: true
       summary: "Get agent processes"
       description: "Return the agent's processes info"
       operationId: api.controllers.syscollector_controller.get_processes_info
