Both tests fixed

--- a/src/unit_tests/shared/CMakeLists.txt
+++ b/src/unit_tests/shared/CMakeLists.txt
@@ -128,14 +128,12 @@ list(APPEND shared_tests_flags "-Wl,--wrap,_merror -Wl,--wrap,_mwarn -Wl,--wrap,
 endif()
 
 list(APPEND shared_tests_names "test_enrollment_op")
-set(ENROLLMENT_OP_BASE_FLAGS  "-Wl,--wrap=OS_IsValidIP,--wrap=_merror,--wrap=_mwarn,--wrap=check_x509_cert \
+set(ENROLLMENT_OP_BASE_FLAGS "-Wl,--wrap=OS_IsValidIP,--wrap=_merror,--wrap=_mwarn,--wrap=check_x509_cert \
                               -Wl,--wrap=_minfo,--wrap=_mdebug1,--wrap=OS_GetHost,--wrap=os_ssl_keys,--wrap=OS_ConnectTCP \
                               -Wl,--wrap=SSL_new,--wrap=SSL_connect,--wrap=SSL_get_error,--wrap=SSL_set_bio \
                               -Wl,--wrap=SSL_write,--wrap=wfopen,--wrap=fclose,--wrap=SSL_read \
                               -Wl,--wrap=BIO_new_socket,--wrap=_merror_exit,--wrap=TempFile,--wrap=OS_MoveFile \
-                              -Wl,--wrap=fgetpos -Wl,--wrap=fopen -Wl,--wrap=fread -Wl,--wrap=fseek -Wl,--wrap=fwrite \
-                              -Wl,--wrap=remove -Wl,--wrap=fgetc -Wl,--wrap=popen \
-                              -Wl,--wrap=fgets -Wl,--wrap=fflush -Wl,--wrap,OS_CloseSocket")
+                              -Wl,--wrap=fgets -Wl,--wrap,OS_CloseSocket")
 
 if(${TARGET} STREQUAL "winagent")
     list(APPEND shared_tests_flags "${ENROLLMENT_OP_BASE_FLAGS} -Wl,--wrap,syscom_dispatch -Wl,--wrap,Start_win32_Syscheck \
@@ -242,7 +240,7 @@ endif()
 if(NOT ${TARGET} STREQUAL "winagent")
 list(APPEND shared_tests_names "test_json_op")
 list(APPEND shared_tests_flags "-Wl,--wrap,w_get_file_content -Wl,--wrap,cJSON_ParseWithOpts \
-                                -Wl,--wrap,cJSON_PrintUnformatted -Wl,--wrap,fopen  -Wl,--wrap,wfopen\
+                                -Wl,--wrap,cJSON_PrintUnformatted -Wl,--wrap,wfopen -Wl,--wrap,fopen\
                                 -Wl,--wrap,fwrite -Wl,--wrap,fclose -Wl,--wrap,popen \
                                 -Wl,--wrap,fflush -Wl,--wrap,fgets \
                                 -Wl,--wrap,fgetpos -Wl,--wrap,fgetc \
