--- a/src/engine/test/source/mocks/CMakeLists.txt
+++ b/src/engine/test/source/mocks/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(test_mocks INTERFACE)
 target_include_directories(test_mocks INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_link_libraries(test_mocks INTERFACE metrics api gmock store_fileDriver)
+# TODO: DELETE THIS AFTER METRICS Mocks are implemented
