Updated builders for sca, wdb, netinfo and upgrade

--- a/src/engine/ruleset/wazuh-core/decoders/core-rsyslog.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/core-rsyslog.yml
@@ -25,4 +25,4 @@ normalize:
   - map:
       - wazuh.source: remote
       - client.ip: $wazuh.origin
-      - related.ip: array_append($wazuh.origin)
+      - related.ip: array_append($client.ip)
